# arcana

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  PLAN.md  Project.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/corpus/: DECISIONS.md  manifest.yaml
scripts/: preview_chunks.py  setup_corpus.py  validate_corpus.py
sql/: schema.sql
src/: logger.py
src/db/: client.py  queries.py
src/indexing/: code_chunker.py  markdown_chunker.py
src/mcp/: server.py
tests/: test_code_chunker.py  test_markdown_chunker.py  test_server.py
