[project]
name = "arcana"
version = "0.1.0"
description = "Experimental MCP server for internal technical knowledge"
requires-python = ">=3.12"

dependencies = [
    # MCP
    "fastmcp",
    # Database
    "supabase",
    # Embeddings
    "voyageai",
    # LLM APIs
    "anthropic",
    "openai",
    # Indexing
    "tree-sitter",
    "tree-sitter-python",
    "mistune",
    # Utils
    "tiktoken",
    "pyyaml",
    "loguru",
    "tree-sitter-cpp>=0.23.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
